create a wrapper for the datas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <fb-chart [config]="charData"></fb-chart>
   <button (click)="updateChart('bar')">update bar</button>
   <button (click)="updateChart('line')">update line</button>
+  <button (click)="updateChart('sample')">sample line</button>
 </div>
 
